cmake_minimum_required(VERSION 3.9)
project(HW2)

set(CMAKE_CXX_STANDARD 11)

add_executable(HW2 main.cpp Station.cpp Station.h Intercity.cpp Intercity.h Vehicle.cpp Vehicle.h Sprinter.cpp Sprinter.h Destination.cpp Destination.h Graph.cpp Graph.h Rail.cpp Rail.h Bus.cpp Bus.h Tram.cpp Tram.h Stad.cpp Stad.h Central.cpp Central.h Oranjestad.cpp Oranjestad.h Input.cpp Input.h)